fix listcollapse, refactor templates

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,8 +5,8 @@ body{
     width: 300px;
     margin: 0 20px 0 0;
     float: left;
-
 }
+
 /*#nutrvalue{*/
 /*    width: 50px;*/
 /*    margin: 0 20px 0 0;*/
@@ -28,7 +28,14 @@ body{
     width: 50px;
     margin-right: 20px;
 }
+
 #productName{
+    display: inline;
+    /*width: 100px;*/
+    margin-right: 20px;
+}
+
+.productName{
     display: inline;
     /*width: 100px;*/
     margin-right: 20px;
